# crypto-scanner

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json  main.cpp
logs/spread/: columns.csv
models/: common.hpp  context.cpp  context.hpp
streams/: base_stream.cpp  base_stream.hpp  binance.cpp  binance.hpp  gateio.cpp  gateio.hpp  mexc.cpp  mexc.hpp
utils/: logger.cpp  logger.hpp  scanner.cpp  scanner.hpp
